# ChangeLog for games-emulation/dolphin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.26 2015/01/12 22:08:17 twitch153 Exp $

  12 Jan 2015; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Adds media-libs/libsdl2 as dependency, bug #535978

  28 Dec 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Adds polarssl[havege] as dependency, bug #483794

*dolphin-4.0.2-r1 (12 Dec 2014)

  12 Dec 2014; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r1.ebuild,
  -dolphin-4.0.2.ebuild, dolphin-9999.ebuild:
  Modifies FindALSA sed regex, bug 532212

  07 Dec 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Updates libsfml version dependency to 2.1, bug #531262

  20 Sep 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Modifies location set for doicon call, bug #523282

  30 Jun 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Adds wxGTK3.0 version dependency, bug #515688

*dolphin-4.0.2 (04 May 2014)

  04 May 2014; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2.ebuild:
  Version bump to 4.0.2

  19 Mar 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Adds gtest to saved External directories.

  18 Mar 2014; Devan Franchini <twitch153@gentoo.org> dolphin-4.0.ebuild:
  Removes unnecessary S variable, bug #504964

  17 Feb 2014; Devan Franchini <twitch153@gentoo.org> dolphin-3.5.ebuild,
  dolphin-4.0.ebuild:
  Changes SRC_URI to appropriate location, adds mirror restriction for 4.0

  07 Feb 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Updates REPO_URI and alters Readme.txt to proper Readme.md file

  25 Jan 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Saves external GL folder from removal

  24 Jan 2014; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild: