@@ -6,19 +6,19 @@ DIST 3.5.zip 28805192 SHA256 56a55060aa912562e6fac2b114b8ad8019deb419b784a1db555
 DIST 4.0.2.zip 28261421 SHA256 90e49ccd92eddc019bcac3b914bf16ce8d49c59fc2bd165ee02a22ea1a0456da SHA512 cb0c788307e6a0048213a2d947ac44d96b5bab064e5be41ad83c308ab98d0126bb173dd0b8705664f898d02eb571f8cb6d5bd6bfd3bd5e00e70126d04dd1cb99 WHIRLPOOL 5ae2bb04513f91300954cd598555a65527356b5e09d85283cbd8dee1a57a5a068dae8938e25d9a0ac77d6956cd08b33ed12afc774b05208dd432d693e4e2c842
 DIST 4.0.zip 23439392 SHA256 a698caf05f47a55c30e09d0aab053a412df683de2e139a6348156b03c502a0ec SHA512 02e366c2fa95ab5f37b0a66b94a5b56a632ef81e13febd982d6385cfaf7fa3edb4364180d4b8312e82bc7b8f150d02cde10248996f6a12286a20d684024aca20 WHIRLPOOL 0cb7b28b911111f4b7bf93c56f2dd31d080e7e0418fb53d9cc9093ca995d2c99a1fa7d5d82111e2c8db363e2b07384be39ec0062ab0252233f480b8e45e9304e
 EBUILD dolphin-3.5.ebuild 3984 SHA256 e672fafe7926bcb010953b58c727102556e0a39c28386f0c5c394cc73a0f6def SHA512 ce7e2dcccdaca3c5a6d35720306a2aa8025b82ee28c26ed296db6660d61268a0e758c661a1a44cf153af0ea686ea4954ec8811ed78418473c49ba919dff239fe WHIRLPOOL 4b7812849f877b2e4a9be1ad81c2c520ea5d1f2637fd75f0a0484763a8afd4b424a6f779e780564af5bd887cc6db3bd75890977bd24f9dd6a448debc0943ed45
-EBUILD dolphin-4.0.2-r1.ebuild 3479 SHA256 aa1d0e9b2a5f3a4c44d0627a73529f0754b790481cc69afbd561fa73e8ae650c SHA512 d8b326189dac6172089e00f5873566c5603010296d0f7cbb892204ba5b89371ae6291ed0fb359c455d533ccb13ac4fd8518fab1ff9f52abe5553959da104988d WHIRLPOOL a9355915b8461ca608dccbb7072f329e43426c5e443bfaf09253324e1a3f4a9552b838d60714a09c8276a739736f79263eaefe37cbf970671e48c5842da5bd33
+EBUILD dolphin-4.0.2-r2.ebuild 3481 SHA256 2bc447b16343d38ca399dda43b888ab857e2a817465fd8e4c92f1448cd92770a SHA512 919ef414c78b10ba7deef9def72094f7ace89e7c44a8b1d8774d47d10aa1def8782d1da9f551fb62dd7bb9e67df8ca1277dcf5eff150fb26e1427e78aba894bc WHIRLPOOL df4fda9eb987d5d066a06e7d9ff30f39081e8444732284168d03e70dcd85f7079ab7ec5feb1f6bad78f9ce5ac1dfa3bfa97055a4c4d2ea70247107fd9c66d71f
 EBUILD dolphin-4.0.ebuild 3474 SHA256 1412017b6866c67af7402658fc5ea69d62f7c60b942a4e9df4fcbbf5e02eca3f SHA512 233848e65dde009e68acf34f18f32404000e47a786aa58179f22a15a777d39d88f7ea88bc2f6d9b9b5dba29b54f881e59fa15b7289c707929671afb1e4f2558c WHIRLPOOL 45bab6dd58c4a1b4125beac8b0d66bd2fa7dc21343e3a520a7873bf0347e92a6eb03089f567fb547452d5feb252ce8ce5b7b59f992bad938fb556e8378b63b13
 EBUILD dolphin-9999.ebuild 3736 SHA256 6fdaf0b1b6e84dfe7e4a93eb63be861e452ae8dc62a702b737215d20ca382d31 SHA512 d07418c5587e3c86a9f65ff22f9ad24ca3b3475a9331880e89bd47ef1dd70767b24d417b7551c2989b5d92d00738cb5af44bffda810d9eb2e32e778a68c10556 WHIRLPOOL 3950308f62c69e72c636e0a06094f9e86fcd152da71e9c34c8cb7692f2bb8e9ef5e3a793a83dd0ddc3e26d56b6d50862fffe25524819330434f976f9e6df0c72
-MISC ChangeLog 4327 SHA256 ec1bb73e19b4917a8844a300f2c7f94afcb172a78a6d35beedeb895cdde01cdf SHA512 5efd90051a2e7fba383f8f63fac38e8018c7d1114e7699bc99f36ab3082830665b3fa371127fb7b1f8860ae8504e6f2ee7a7927b83a975dc6273fa4921de4cd4 WHIRLPOOL 13a6f3a2eac8d182a80ffcc14c530a8bb077fc29754e0a6c18e6d3ae7824419320444e6137879e13cf97d56a3430f47e5118bfe72a5274a03392cc102a9c874d
+MISC ChangeLog 4522 SHA256 3176f78cf7f0337349cd8fc9239e3f28ab59a31c44f5a1648998a0a9185cd6b7 SHA512 405f8acac55aa015ad1f5ba67434c99b1b7abcd4507cb48a5e5c3c592bf4d3c44059164d40b6225aba964ef5f0a80391b739c317d98038a4ec3629cd552104f6 WHIRLPOOL 457dd30e575cb319366203b5be213e02b63073452925b5ccbf56cd7cf73e1d04dc481d978efb17f4bed2c23ba56a474255cc529d25d24628210aa1471f3c8ff8
 MISC metadata.xml 442 SHA256 11ac55298ad628e589b592a2da00db1cabfd31ff8621c0fea059d714acdce334 SHA512 96abf53048bb8aea1387eacc40b9cda4e6099f079ddeb669fb23458d67880804fb015970207aa10a21227b87c153208a8dfa4bf4ea279ff7e53dcfebf18ac30e WHIRLPOOL e72458e354da2e4bfeb67de52c31d50a61f3b926fe16c0bcf4aae5e599858e413fcc9057fe1b098e43ee18fabe6a0f05dff008f59065cf34bad02da6480fc120
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUtEXZAAoJEEAKp6Qwg9Y3Ng0H/3LjqSbqUDSSTrSxOwcBkoyb
-T8jPu1Sin+XpmnsbPjKKegc1TgcqB5Z4uHHM7/oafTWpwr+cr3DInuOKGHE7vbsW
-QmvDDRMPjrOZORcdEguZToq5Olv1SX0eLgVpGj3/FDIKJwjnktWYAYgkMVhPoLYM
-sXX7MRp0fZSYOmzDeJAWd+H4F1hfwbd3Ht3hTcBN0P0cVUZ7JNTJASLnIFP6hP/L
-4D844qFEx1qSFM3yiTPQuhzICzXk3JqoV2z/7GnIPktF2F0sjPNaSqEaupSK0x6B
-M0QTM1uzxmxNA9+dcCNCcMOAx/ha9WrFx20q7P1nPB1qJKWiRVU5OtkM61banCE=
-=gmcJ
+iQEcBAEBCAAGBQJUuV58AAoJEEAKp6Qwg9Y3gfcIALOZKuQErkMDSjMejQxjINuj
+cItCzm4V8bxjc2In4JAVwELq7nYO3gpoEaqLpE6aByeXpdec4GgmN8R9dMcyxnjM
+cmNNnPjWFSzfii0ontflGrZiEC3WElab31RGm0eunC0X5hhwZPl4As6Vdv5x2WZJ
+C2FmxED2hI/s2F5+i3/4P1EQpIi25RV++1zY6WN+W4R1AfWmNt+3xsVqMQoFnqY1
+7oM3erAIO19fDPLqAxBCuUFecvGx6BiHbxyVzdc3ye8Cd+fOuM7rs7nzRVJoZhN0
+fWQ81xS3tvD6WseBJxJjTHHoRq1pH+P8NqITKHAwtbqsCBQRWXkB9qCLk7a6KRo=
+=V1hT
 -----END PGP SIGNATURE-----
