@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst preinst prepare pretend setup test unpack
-DEPEND=>=media-libs/glew-1.6 >=media-libs/libsdl-1.2[joystick] <media-libs/libsfml-2.0 >=net-libs/miniupnpc-1.8 sys-libs/readline x11-libs/libXext x11-libs/libXrandr alsa? ( media-libs/alsa-lib ) ao? ( media-libs/libao ) bluetooth? ( net-wireless/bluez ) ffmpeg? ( virtual/ffmpeg ) lzo? ( dev-libs/lzo ) openal? ( media-libs/openal ) opengl? ( virtual/opengl ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) app-arch/zip media-gfx/nvidia-cg-toolkit media-libs/freetype media-libs/libsoundtouch >=sys-devel/gcc-4.6.0 x11-libs/wxGTK:2.9 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=Gamecube and Wii game emulator
-EAPI=5
-HOMEPAGE=https://www.dolphin-emu.org/
-IUSE=alsa ao bluetooth doc ffmpeg +lzo openal opengl openmp portaudio pulseaudio
-KEYWORDS=~amd64
-LICENSE=GPL-2
-RDEPEND=>=media-libs/glew-1.6 >=media-libs/libsdl-1.2[joystick] <media-libs/libsfml-2.0 >=net-libs/miniupnpc-1.8 sys-libs/readline x11-libs/libXext x11-libs/libXrandr alsa? ( media-libs/alsa-lib ) ao? ( media-libs/libao ) bluetooth? ( net-wireless/bluez ) ffmpeg? ( virtual/ffmpeg ) lzo? ( dev-libs/lzo ) openal? ( media-libs/openal ) opengl? ( virtual/opengl ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) games-misc/games-envd
-RESTRICT=mirror
-SLOT=0
-SRC_URI=https://github.com/dolphin-emu/dolphin/archive/4.0.2.zip
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
-_md5_=9dca2197b2215b95bb23e838d741bbc4
