@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/dolphin
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.26 2015/01/12 22:08:17 twitch153 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.27 2015/01/16 18:54:41 twitch153 Exp $
+
+*dolphin-4.0.2-r2 (16 Jan 2015)
+
+  16 Jan 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r2.ebuild,
+  -dolphin-4.0.2-r1.ebuild:
+  Adds media-libs/libsdl2 as dependency, bug #535978
 
   12 Jan 2015; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
   Adds media-libs/libsdl2 as dependency, bug #535978
